# Robot-Hexapode

./: .gitignore  .project  README.md
Hexapode_PI4B/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  Hexapi  InstallPI.md  build.ninja  cmake_install.cmake
Hexapode_PI4B/main/Src/: main.cpp
Hexapode_STM32F7/: .cproject  .mxproject  .project  CMakeLists.txt  Hexapode_STM32F7.ioc  Hexapode_STM32F7.launch  cmake_install.cmake
Hexapode_STM32F7/Application/Inc/: test.h
Hexapode_STM32F7/Application/Src/: test.c
Hexapode_STM32F7/Core/Inc/: LedManagement.h  main.h  stm32f7xx_it.h  stm32f7xx_nucleo_bus.h
Hexapode_STM32F7/Core/Src/: LedManagement.c  main.c  stm32f7xx_hal_msp.c  stm32f7xx_it.c  stm32f7xx_nucleo_bus.c
Hexapode_STM32F7/Debug/: Hexapode_STM32F7.elf  Hexapode_STM32F7.list  Hexapode_STM32F7.map  makefile  objects.list
Hexapode_STM32F7/Debug/Core/Src/: main.cyclo  main.su  stm32f7xx_hal_msp.cyclo  stm32f7xx_hal_msp.su  stm32f7xx_it.cyclo  stm32f7xx_it.su  subdir.mk
Hexapode_STM32F7/cmake/: st-project.cmake
SW/: CMakeLists.txt  Cmake.md  Doxyfile
SW/src/: hello.c  main.c
